+ Updated version to 5.7.0.1 + Assorted minor tweaks + Initial attempt to build with qmake + Fix odd crash in packet handling. + Normalize some data type usage. + Remove ItemDB and related utilities from build since they haven't   worked in a while and would really need a rewrite. + Remove gdbm/db3 requirements + Update some copyright info.

--- a/showeq/trunk/src/Makefile.am
+++ b/showeq/trunk/src/Makefile.am
@@ -1,16 +1,8 @@
-INCLUDES = $(QT_INCLUDES) $(X_INCLUDES) $(DB3_INCLUDES) -DPKGDATADIR=\"$(pkgdatadir)/\" -I/usr/include/pcap $(USER_INCLUDES)
+INCLUDES = $(QT_INCLUDES) $(X_INCLUDES) -DPKGDATADIR=\"$(pkgdatadir)/\" -I/usr/include/pcap $(USER_INCLUDES)
 
 QTLIB = -lqt-mt
 
-if USEDB3
-DB3_SRCS = db3conv.cpp
-DB3_LIBS = $(DB3_LDFLAGS) -ldb_cxx
-endif
-
-ITEMDB_SRCS = itemdb.cpp gdbmconv.cpp $(DB3_SRCS)
-nodist_ITEMDB_SRCS =  
-
-bin_PROGRAMS = showeq showeqitemdbtool
+bin_PROGRAMS = showeq 
 
 showeq_SOURCES = main.cpp spawn.cpp spawnshell.cpp spawnlist.cpp spellshell.cpp \
 	spelllist.cpp vpacket.cpp editor.cpp filter.cpp packetfragment.cpp packetstream.cpp \
@@ -23,20 +15,20 @@ showeq_SOURCES = main.cpp spawn.cpp spawnshell.cpp spawnlist.cpp spellshell.cpp 
 	datalocationmgr.cpp eqstr.cpp messages.cpp message.cpp messagefilter.cpp messagewindow.cpp \
 	messageshell.cpp terminal.cpp filteredspawnlog.cpp messagefilterdialog.cpp \
 	diagnosticmessages.cpp mapicon.cpp filternotifications.cpp netstream.cpp guildshell.cpp \
-	guildlist.cpp bazaarlog.cpp $(ITEMDB_SRCS) 
+	guildlist.cpp bazaarlog.cpp 
 
 showeq_moc_SRCS = bazaarlog.moc category.moc combatlog.moc compass.moc \
   compassframe.moc datetimemgr.moc editor.moc experiencelog.moc \
   filteredspawnlog.moc filtermgr.moc filternotifications.moc group.moc \
-  guild.moc guildlist.moc guildshell.moc interface.moc itemdb.moc logger.moc \
+  guild.moc guildlist.moc guildshell.moc interface.moc logger.moc \
   map.moc mapicon.moc messagefilter.moc messagefilterdialog.moc messages.moc \
   messageshell.moc messagewindow.moc netdiag.moc packet.moc packetinfo.moc \
   packetlog.moc packetstream.moc player.moc seqlistview.moc \
   seqwindow.moc skilllist.moc spawnlist.moc spawnlist2.moc spawnlistcommon.moc \
   spawnlog.moc spawnmonitor.moc spawnpointlist.moc spawnshell.moc spelllist.moc \
   spellshell.moc statlist.moc terminal.moc xmlpreferences.moc zonemgr.moc
-        
-nodist_showeq_SOURCES = ui_mapicondialog.h ui_mapicondialog.cpp $(showeq_moc_SRCS) m_ui_mapicondialog.cpp $(nodist_ITEMDB_SRCS)
+
+nodist_showeq_SOURCES = ui_mapicondialog.h ui_mapicondialog.cpp $(showeq_moc_SRCS) m_ui_mapicondialog.cpp 
 
 $(srcdir)/bazaarlog.cpp: bazaarlog.moc
 $(srcdir)/category.cpp: category.moc
@@ -54,7 +46,6 @@ $(srcdir)/guild.cpp: guild.moc
 $(srcdir)/guildlist.cpp: guildlist.moc
 $(srcdir)/guildshell.cpp: guildshell.moc
 $(srcdir)/interface.cpp: interface.moc
-$(srcdir)/itemdb.cpp: itemdb.moc
 $(srcdir)/logger.cpp: logger.moc
 $(srcdir)/map.cpp: map.moc
 $(srcdir)/mapicon.cpp: mapicon.moc
@@ -87,12 +78,8 @@ $(srcdir)/xmlpreferences.cpp: xmlpreferences.moc
 $(srcdir)/zonemgr.cpp: zonemgr.moc
 $(srcdir)/packetinfo.cpp: s_everquest.h
 
-showeq_LDADD = $(QT_LDFLAGS) $(QTLIB) $(DB3_LIBS) $(LIBPTHREAD) $(MEMORY_LIBS) \
+showeq_LDADD = $(QT_LDFLAGS) $(QTLIB) $(LIBPTHREAD) $(MEMORY_LIBS) \
 $(PROFILE_LIBS) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
-
-showeqitemdbtool_SOURCES = itemdbtool.cpp util.cpp diagnosticmessageslight.cpp datalocationmgr.cpp $(ITEMDB_SRCS)
-nodist_showeqitemdbtool_SOURCES = $(nodist_ITEMDB_SRCS)
-showeqitemdbtool_LDADD = $(QT_LDFLAGS) $(DB3_LIBS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
 
 TEST_PROGS = sortitem
 
@@ -101,29 +88,21 @@ if HAVE_GD
 GD_CGI_PROGS = drawmap.cgi
 endif
 
-CGI_PROGS = listitem.cgi showitem.cgi $(GD_CGI_PROGS) listspawn.cgi showspawn.cgi
+CGI_PROGS = $(GD_CGI_PROGS) listspawn.cgi showspawn.cgi
 endif
 
 noinst_PROGRAMS = $(TEST_PROGS) $(CGI_PROGS)
 
-listitem_cgi_SOURCES = listitem.cpp util.cpp diagnosticmessageslight.cpp  $(ITEMDB_SRCS) cgiconv.cpp
-nodist_listitem_cgi_SOURCES = $(nodist_ITEMDB_SRCS)
-listitem_cgi_LDADD = $(QT_LDFLAGS) $(DB3_LIBS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
-
-showitem_cgi_SOURCES = showitem.cpp util.cpp diagnosticmessageslight.cpp  $(ITEMDB_SRCS) cgiconv.cpp
-nodist_showitem_cgi_SOURCES = $(nodist_ITEMDB_SRCS)
-showitem_cgi_LDADD = $(QT_LDFLAGS) $(DB3_LIBS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
-
-listspawn_cgi_SOURCES = listspawn.cpp spawn.cpp util.cpp diagnosticmessageslight.cpp cgiconv.cpp
-nodist_listspawn_cgi_SOURCES = $(nodist_ITEMDB_SRCS)
+ listspawn_cgi_SOURCES = listspawn.cpp spawn.cpp util.cpp diagnosticmessageslight.cpp cgiconv.cpp
+nodist_listspawn_cgi_SOURCES = 
 listspawn_cgi_LDADD = $(QT_LDFLAGS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
 
 showspawn_cgi_SOURCES = showspawn.cpp spawn.cpp util.cpp diagnosticmessageslight.cpp cgiconv.cpp
-nodist_showspawn_cgi_SOURCES = $(nodist_ITEMDB_SRCS)
+nodist_showspawn_cgi_SOURCES =
 showspawn_cgi_LDADD = $(QT_LDFLAGS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
 
 drawmap_cgi_SOURCES = drawmap.cpp util.cpp diagnosticmessageslight.cpp cgiconv.cpp
-nodist_drawmap_cgi_SOURCES = $(nodist_ITEMDB_SRCS)
+nodist_drawmap_cgi_SOURCES = 
 drawmap_cgi_LDADD = $(QT_LDFLAGS) $(QTLIB) -lgd $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
 
 sortitem_SOURCES = sortitem.cpp util.cpp diagnosticmessageslight.cpp 
@@ -132,7 +111,7 @@ sortitem_LDADD = $(QT_LDFLAGS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDF
 
 EXTRA_DIST = h2info.pl
 
-noinst_HEADERS = classes.h compass.h everquest.h interface.h main.h map.h filter.h vpacket.h editor.h packet.h packetcapture.h packetcommon.h packetformat.h packetstream.h packetfragment.h packetinfo.h races.h skills.h spells.h util.h experiencelog.h combatlog.h spawn.h spawnshell.h spawnlist.h spellshell.h spelllist.h languages.h weapons.h weapons1.h weapons27.h weapons28.h weapons29.h weapons2a.h weapons2b.h weapons2c.h decode.h itemdb.h gdbmconv.h cgiconv.h skilllist.h statlist.h db3conv.h dbcommon.h deity.h player.h crctab.h filtermgr.h point.h pointarray.h mapcore.h category.h compassframe.h group.h guild.h fixpt.h netdiag.h zones.h logger.h xmlconv.h xmlpreferences.h seqwindow.h seqlistview.h zonemgr.h spawnmonitor.h spawnpointlist.h typenames.h spawnlistcommon.h spawnlist2.h datetimemgr.h spawnlog.h packetlog.h datalocationmgr.h eqstr.h messages.h messagefilter.h messagewindow.h messageshell.h terminal.h filteredspawnlog.h messagefilterdialog.h diagnosticmessages.h mapicon.h mapicondialog.ui mapicondialog.ui.h filternotifications.h netstream.h guildshell.h guildlist.h bazaarlog.h message.h s_everquest.h staticspells.h 
+noinst_HEADERS = classes.h compass.h everquest.h interface.h main.h map.h filter.h vpacket.h editor.h packet.h packetcapture.h packetcommon.h packetformat.h packetstream.h packetfragment.h packetinfo.h races.h skills.h spells.h util.h experiencelog.h combatlog.h spawn.h spawnshell.h spawnlist.h spellshell.h spelllist.h languages.h weapons.h weapons1.h weapons27.h weapons28.h weapons29.h weapons2a.h weapons2b.h weapons2c.h decode.h cgiconv.h skilllist.h statlist.h deity.h player.h crctab.h filtermgr.h point.h pointarray.h mapcore.h category.h compassframe.h group.h guild.h fixpt.h netdiag.h zones.h logger.h xmlconv.h xmlpreferences.h seqwindow.h seqlistview.h zonemgr.h spawnmonitor.h spawnpointlist.h typenames.h spawnlistcommon.h spawnlist2.h datetimemgr.h spawnlog.h packetlog.h datalocationmgr.h eqstr.h messages.h messagefilter.h messagewindow.h messageshell.h terminal.h filteredspawnlog.h messagefilterdialog.h diagnosticmessages.h mapicon.h mapicondialog.ui mapicondialog.ui.h filternotifications.h netstream.h guildshell.h guildlist.h bazaarlog.h message.h s_everquest.h staticspells.h 
 
 CLEANFILES = $(nodist_showeq_SOURCES)
 
